ToDo / Roadmap
 - BUG: png images can't export to jpg!
 - open -> recent projects
 - handle empty images (placeholder) differently
 - Load images for Icons in background
 - Implement disable filter
 - Add ability to scale resulting images after cropping
   * Set image size, use it in pdf export.
 - progress dialog while exporting / loading
 - Display page preview instead of original image in image list
 - drag and drop in the image list
 - Filter to fix image color / convert to black & white...
 - error message on console: kfilemodule(5761)/kio (KDirModel) KDirModelPrivate::_k_slotDeleteItems: No node found for item that was just removed: KUrl("file:(((...")
 - application icon
 - windows port: security credentials (producer...)
 - png images do not scale well
 - add a placeholder at the end of the imagetablewidget, so that can insert an image at the end and insert an image on the right when there is no image in the list.

2012xxxx; YASW 0.3
 - About menu/window with authors, licence...

20121118; YASW 0.2
 - export to pdf
 - a lot of small fixes in handling to pages types (even/odd)
 - cleaning old code away (only one page type handling)
 - menu for adding/removing images
 - key "delete" deletes an image
 - key "pgup/pgdown" to move image
 - windows port (build on linux with mxe.cc)
 - remove add left/right in favor of one "add", wich defaults to left.

20121006; YASW 0.1
 - First release
 - handling two page types (left/right)
 - Saving / Loading project Settings
 - Exporting project to images
 - Propaging page/image settings to other pages/images
