@@ -35,11 +35,16 @@ MainWindow::MainWindow(QWidget *parent) :
     ui->imageList->setFilterContainer(ui->filterContainer);
 
     showMaximized();
+
+    settings = new QSettings("YASW", "YASW");
+    /* update recent projects menu */
+    addRecentProject("");
 }
 
 MainWindow::~MainWindow()
 {
     delete ui;
+    delete settings;
 }
 
 void MainWindow::changeEvent(QEvent *e)
@@ -114,34 +119,61 @@ bool MainWindow::saveProjectSettings(QString fileName)
                           );
     return false;
 }
+/* \Brief Sets the current project name in the title bar and inserts it to the recent projects.
 
+    It also saves the current project file name in the property projectFileName for other usages.
+*/
 void MainWindow::setProjectFileName(QString fileName)
 {
     QFileInfo fi(fileName);
 
-    projectFileName = fileName;
+    this->projectFileName = fileName;
 
-    if (fileName.length() > 0)
+    if (fileName.length() > 0) {
         setWindowTitle(tr("yasw - %1").arg(fi.fileName()));
+        addRecentProject(fileName);
+    }
     else
         setWindowTitle(tr("yasw - new project"));
 }
 
+void MainWindow::addRecentProject(QString fileName)
+{
+    QStringList recentProjects;
+    recentProjects = settings->value("recent_projects").toStringList();
 
-/** \brief Open a project from file
- // FIXME: Load and Check QStream version and yasw Version
- */
+    // If we have a "valid" filename, update the list; else just update the menu
+    //NOTE: perhaps the menu update thing should be done in a separate function
+    if (fileName.size() > 0) {
+        /* remove the file from the list to avoid duplicates */
+        recentProjects.removeAll(fileName);
+        recentProjects.prepend(fileName);
+    }
 
-void MainWindow::on_action_Open_triggered()
+    /* reduce size of list to MAX_RECENT_PROJECTS */
+    while (recentProjects.size() > MAX_RECENT_PROJECTS)
+        recentProjects.removeLast();
+
+    settings->setValue("recent_projects", recentProjects);
+
+    ui->recentProjects->clear();
+
+    if (recentProjects.size() == 0) {
+        ui->recentProjects->setEnabled(false);
+    } else {
+        ui->recentProjects->setEnabled(true);
+        QAction *action;
+        QString project;
+        foreach (project, recentProjects) {
+            action = ui->recentProjects->addAction(project);
+            connect(action, SIGNAL(triggered()), this, SLOT(openRecentProject()));
+        }
+    }
+}
+
+void MainWindow::loadProject(QString fileName)
 {
     QMap<QString, QVariant> settings;
-
-    QString fileName = QFileDialog::getOpenFileName(this,
-                        tr("Choose project"),
-                        QDir::currentPath(),   // FIXME: save last path
-                        tr("yasw projects (*.yasw);;All files (* *.*"));
-    if (fileName.length() == 0) // Cancel pressed
-        return;
 
     QFile file(fileName);
     if (file.open(QIODevice::ReadOnly)) {
@@ -152,6 +184,25 @@ void MainWindow::on_action_Open_triggered()
     setProjectFileName(fileName);
 
     ui->imageList->setSettings(settings);
+}
+
+
+/** \brief Open a project from file
+ // FIXME: Load and Check QStream version and yasw Version
+ */
+
+void MainWindow::on_action_Open_triggered()
+{
+    QString fileName = QFileDialog::getOpenFileName(this,
+                        tr("Choose project"),
+                        QDir::currentPath(),   // FIXME: save last path
+                        tr("yasw projects (*.yasw);;All files (* *.*"));
+    if (fileName.length() == 0) // Cancel pressed
+        return;
+
+    loadProject(fileName);
+
+
 }
 
 
@@ -220,4 +271,11 @@ void MainWindow::on_action_About_triggered()
 
                           "You should have received a copy of the GNU General Public License "
                           "along with YASW.  If not, see <http://www.gnu.org/licenses/>."));
+}
+
+void MainWindow::openRecentProject()
+{
+    QAction *action = qobject_cast<QAction *>(sender());
+    if (action)
+        loadProject(action->text());
 }
