@@ -1,6 +1,5 @@
 ToDo / Roadmap
  - BUG: png images can't export to jpg!
- - open -> recent projects
  - handle empty images (placeholder) differently
  - Load images for Icons in background
  - Implement disable filter
@@ -15,9 +14,11 @@ ToDo / Roadmap
  - windows port: security credentials (producer...)
  - png images do not scale well
  - add a placeholder at the end of the imagetablewidget, so that can insert an image at the end and insert an image on the right when there is no image in the list.
+ - Application Icon for YASW
 
 2012xxxx; YASW 0.3
- - About menu/window with authors, licence...
+ - About dialog
+ - open -> recent projects
 
 20121118; YASW 0.2
  - export to pdf
